# skipper

./: .coveragerc  .gitignore  .pylintrc  Dockerfile.skipper-build  LICENSE  MANIFEST.in  Makefile  README.md  dev-requirements.txt  requirements.txt  setup.cfg  setup.py  skipper.yaml  tox.ini
.github/workflows/: build.yml  publish-to-pypi.yml
data/: skipper-complete.sh  skipper-entrypoint.sh
skipper/: builder.py  cli.py  commands.py  config.py  docker.py  git.py  main.py  runner.py  utils.py
skipper/data/: skipper-complete.sh  skipper-entrypoint.sh
tests/: consts.py  test_builder.py  test_cli.py  test_commands.py  test_config.py  test_docker.py  test_git.py  test_runner.py  test_runner_podman.py  test_utils.py
