[metadata]
name = strato-skipper
author = Adir Gabai
author-email = adir@stratoscale.com
home-page = http://github.com/Stratoscale/skipper
summary = Easily dockerize your Git repository
license = Apache-2

requires-dist = setuptools


[files]
packages = 
    skipper

[entry_points]
console_scripts = 
    skipper = skipper.main:main

[pep8]
max-line-length=145
