[metadata]
name = strato-skipper
author = Adir Gabai
author_email = adir@stratoscale.com
home_page = http://github.com/Stratoscale/skipper
summary = Easily dockerize your Git repository
license = Apache-2
long_description = file: README.md
long_description_content_type = text/markdown

requires_dist = setuptools
requires_python = >=3


[files]
packages = 
    skipper

[entry_points]
console_scripts = 
    skipper = skipper.main:main

[pep8]
max_line_length=145
